--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^1.8.1",
     "flowbite-vue": "^0.1.0",
     "maplibre-gl": "^3.3.1",
+    "three": "^0.158.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
@@ -22,6 +23,6 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.4.5"
+    "vite": "^4.5.0"
   }
 }
